--- a/global.css
+++ b/global.css
@@ -51,12 +51,5 @@ button {
 	color: #333;
 	background-color: #f4f4f4;
 	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
+	cursor: pointer;
 }
