--- a/public/global.css
+++ b/public/global.css
@@ -1,11 +1,14 @@
 html, body {
+	box-sizing: border-box;
 	position: relative;
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
+	user-select: none;
 }
 
 body {
-	color: #333;
+	color: #2c3e50;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -34,7 +37,6 @@ input, button, select, textarea {
 	font-size: inherit;
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 2px;
 }
